# zero2prod

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yaml  general.yaml
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  health_check_test.rs
